# analog-meter-detection

./: .gitignore  README.md  pyproject.toml  test_samples.py
.github/: copilot-instructions.md
data/: meter_001_debug.txt  meter_001_result_debug.txt  meter_002_debug.txt  meter_002_result_debug.txt  meter_003_debug.txt  meter_003_result_debug.txt  meter_004_debug.txt  meter_004_result_debug.txt  meter_005_debug.txt  meter_005_result_debug.txt
src/analog_meter_detection/: __init__.py  __init__.py.bak  __init__.py.bak2  __init_new__.py  __main__.py  detector.py  image_utils.py
