[project]
name = "analog-meter-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ylabo0717", email = "yosuke.horie@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
]

[project.scripts]
analog-meter-detection = "analog_meter_detection:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
]
